maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:21: error: Unmatched closing brace '}' ignored here
}
^